--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-		"dbcs": "Data Source=YISC1100941LT\\SQLEXPRESS;Initial Catalog=Test_EduHub;Trusted_Connection=True;TrustServerCertificate=True"
+		"dbcs": ""
   }
 }
